# Mocha

./: .gitignore  CMakeLists.txt  CMakePresets.json  Mocha.sln  README.md
Application/App/: App.vcxproj  imgui.ini
Application/App/Source/: App.cpp
Application/Mocha/: Mocha.vcxproj
Application/Mocha/Source/Mocha/: Mocha.cpp  Mocha.h
Application/Mocha/Source/Mocha/Debug/: Debug.cpp  Debug.h
res/graphics/: mocha_mock_githubbanner.psd  mocha_mock_logo.psd
res/shaders/: basicFragmentShader.glsl  basicVertexShader.glsl
src/: main.cpp
src/GUI/: gui.h
src/core/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  RenderObject.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  rendering.cpp  rendering.h  scene.cpp  scene.h
src/core/lighting/: Light.cpp  Light.h
src/core/renderobject/: Material.h  Mesh.h  RenderObject.cpp  RenderObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/interface/: gui.cpp  gui.h  logger.cpp  logger.h
src/io/: logger.h
